Regressions related to no longer setting user.dir

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • internal
    • Affects Version/s: internal
    • Component/s: tools

      JDK-8226904 changed the applauncher to no longer set the current directory before launching java.
      The launch of java depended on several entries in the cfg file (main-jar, app.runtime, app.classpath, and --module-path).
      Each of these previously depended on the current directory being set to the app dir.

      app.runtime has always been $APPDIR/runtime.

      Now the --module path, the main-jar, and each entry in the classpath must also be based on $APPDIR

            Assignee:
            Andy Herrick (Inactive)
            Reporter:
            Andy Herrick (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: