8227058: Regressions related to no longer setting user.dir

Reviewed-by: almatvee